<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:text=""
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/exchange"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="0"
        android:layout_marginTop="24dp"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:gravity="center"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dollar"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/euro"

        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/won"

        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b7"
        android:onClick="openOne"
        android:layout_marginTop="10dp"/>
</LinearLayout>